Start implementing the gui.

--- a/relive/gui/relive.ini
+++ b/relive/gui/relive.ini
@@ -1,16 +1,14 @@
-[graphics]
-width = 600
-height = 400
+[appearance]
+fullscreen = 0
 
 [network]
-serverip = http://192.168.40.43
-boolexample = 1
+serverip = http://192.168.1.1
 
 [MIDI]
 looperbasenote = 64
-boolexample2 = 0
+switch = 0
 
 [storage]
 userdir = application
-customdir = /home/daniel/devel
+customdir = 
 
